# database-server

./: .gitignore  Caddyfile  Cargo.toml  README.md
control-panel/: build.js  index.html  lib.d.ts  login.html  package.json  tsconfig.json
control-panel/src/: api.ts  create-database.tsx  list-databases.tsx  main.tsx  network-resource.tsx  router.tsx
libdb/: Cargo.toml
libdb/src/: error.rs  fragment.rs  lib.rs  rw.rs  rwslice.rs  store.rs
src/: app.rs  auth.rs  database.rs  db.rs  error.rs  index.rs  main.rs  oauth.rs  resources.rs
