[package]
name = "simple-database-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
log = "0.4.27"
backtrace = "0.3.75"
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.0", features = ["fs"] }
reqwest = { version = "0.12.15", features = ["json"] }
rand = "0.9.1"
base64 = "0.22.1"
futures = "0.3.31"
chrono = { version = "0.4.41", features = ["serde"] }
libc = "0.2.172"
libdb = { path = "libdb" }

[build-dependencies]
pkg-config = "0.3.32"

[workspace]
members = ["libdb"]